<resources>
    <string name="app_name">BudgetApp</string>
    <string name="income_month">Income per month</string>
    <string name="sum">Sum</string>
    <string name="save_month">Save per month</string>
    <string name="monthly_expenses">Monthly expenses</string>
    <string name="categories_to_save_on">Categories to save on</string>
    <string name="categories">Category, another category, one final category</string>
    <string name="profile">User profile</string>
    <string name="name_user_placeholder">Placeholder Placeholdersen</string>
    <string name="user_avatar">User avatar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_overview">overview</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="DAY">DAY</string>
    <string name="kroner">Kr</string>
    <string name="today">Today</string>
    <string name="month">This Month</string>
    <string name="week">This Week</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_changes">Save Changes</string>
    <string name="overview">Overview</string>
    <string name="Profile_setting">Profile Settings</string>
    <string name="Profile">Profile</string>
    <string name="tab_text_1">Day</string>
    <string name="tab_text_2">Week</string>
    <string name="tab_text_3">Month</string>
    <string name="date">Date:</string>
    <string name="sum_colon">Sum:</string>
    <string name="location">Location:</string>
    <string name="date_test">01.01.18</string>
    <string name="sum_test">1000.00 kr</string>
    <string name="test_butikk">Butikk</string>
    <string name="Detail">Detail</string>
    =======
    <string name="home">Home</string>
    <string name="hello">Hello</string>
    <string name="category">Category</string>
    <string name="test">test</string>
    <string name="add_expense">Add expense</string>
    <string name="enter_the_sum">Enter the sum</string>
    <string name="where">Where</string>
    <string name="description">Description</string>
    <string name="new_cat">New</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="add_new_category">Add new category</string>
    <string name="add">Add</string>
    <string name="google_navn">her skal det stå et navn fra google konto</string>
    <string name="Chart">Chart</string>
    <string name="your_total_expenses">Your total Expenses</string>
    >>>>>>> Stashed changes
</resources>
