<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="no.hiof.fredrivo.budgetapp.ProfilActivity">

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_settings"
        android:title="@string/Profile_setting"
        app:showAsAction="always" />
    <item
        android:id="@+id/overview"
        android:orderInCategory="100"
        android:title="@string/overview"
        app:showAsAction="never" />
    <item
        android:id="@+id/profile"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>