<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/profiltoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/app_name">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/income_month"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtProfilIncome"
        app:layout_constraintStart_toStartOf="@+id/txtProfilIncome"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/txtProfilIncome"
            android:layout_width="137dp"
            android:layout_height="27dp"
            android:layout_marginBottom="8dp"
            android:text="@string/sum"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_month"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txtProfilSave"
            app:layout_constraintStart_toStartOf="@+id/txtProfilSave"
            app:layout_constraintTop_toBottomOf="@+id/txtProfilIncome" />

        <TextView
            android:id="@+id/txtProfilSave"
            android:layout_width="133dp"
            android:layout_height="27dp"
            android:layout_marginBottom="8dp"
            android:text="@string/sum"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_expenses"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txtProfilMonthlyEx"
            app:layout_constraintStart_toStartOf="@+id/txtProfilMonthlyEx"
            app:layout_constraintTop_toBottomOf="@+id/txtProfilSave" />

        <TextView
            android:id="@+id/txtProfilMonthlyEx"
            android:layout_width="130dp"
            android:layout_height="23dp"
            android:layout_marginBottom="8dp"
            android:text="@string/sum"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories_to_save_on"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txtProfilCategories"
            app:layout_constraintStart_toStartOf="@+id/txtProfilCategories"
            app:layout_constraintTop_toBottomOf="@+id/txtProfilMonthlyEx" />

    <TextView
        android:id="@+id/txtProfilCategories"
        android:layout_width="357dp"
        android:layout_height="84dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="8dp"
        android:text="@string/categories"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/name_user_placeholder"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imageView"
            android:layout_width="97dp"
            android:layout_height="101dp"
            android:layout_marginStart="144dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="143dp"
            android:src="@drawable/fallout"
            app:civ_border_color="#FF000000"
            app:civ_border_width="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtProfileName" />




</android.support.constraint.ConstraintLayout>