<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".week_tab">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="227dp"
            android:layout_height="69dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/week"

            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent"
            tools:textSize="45sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="112dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="96dp"
            android:gravity="center"
            android:text="@string/sum"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:textSize="30sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="77dp"
            android:layout_height="43dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/kroner"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.306"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.0"
            tools:textSize="30sp" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>