<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".day_tab">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/numbert1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtToday"
            android:layout_width="144dp"
            android:layout_height="77dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/today"
            app:layout_constraintEnd_toEndOf="@+id/txtCurrency"
            app:layout_constraintHorizontal_bias="0.434"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            tools:textSize="45sp" />

        <TextView
            android:id="@+id/txtCurrency"
            android:layout_width="34dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/kroner"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:layout_constraintVertical_bias="1.0"
            tools:textSize="30sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="126dp"
            android:layout_height="55dp"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="96dp"
            android:gravity="center"
            android:text="@string/sum"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:textSize="30sp" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>